# linalg-cmake-modules

./: FindBLAS.cmake  FindBLIS.cmake  FindIBMESSL.cmake  FindILP64.cmake  FindIntelMKL.cmake  FindLAPACK.cmake  FindOpenBLAS.cmake  FindReferenceLAPACK.cmake  FindReferenceScaLAPACK.cmake  FindScaLAPACK.cmake  FindStandardFortran.cmake  FindTBB.cmake  LinAlgModulesMacros.cmake
.github/workflows/: cmake.yml
.github/workflows/linalg/: Makefile
.github/workflows/scripts/: blas_libname.sh  check_blas_cmake_cache.sh  check_lapack_cmake_cache.sh  check_scalapack_cmake_cache.sh  lapack_libname.sh  scalapack_libname.sh
examples/blas/: common.cmake
examples/blas/default/: CMakeLists.txt
examples/blas/default_c/: CMakeLists.txt
examples/blas/default_cxx/: CMakeLists.txt
examples/blas/ilp64/: CMakeLists.txt
examples/blas/lp64/: CMakeLists.txt
examples/ilp64/: CMakeLists.txt  test.cxx  test.f90
examples/introspect_mpi/: CMakeLists.txt
examples/introspect_omp/: CMakeLists.txt
examples/lapack/: common.cmake
examples/lapack/default/: CMakeLists.txt
examples/lapack/ilp64/: CMakeLists.txt
examples/lapack/lp64/: CMakeLists.txt
examples/lp64/: CMakeLists.txt
examples/scalapack/: common.cmake
examples/scalapack/default/: CMakeLists.txt
examples/scalapack/ilp64/: CMakeLists.txt
examples/scalapack/lp64/: CMakeLists.txt
util/: BLASUtilities.cmake  CommonFunctions.cmake  IntrospectOpenMP.cmake  LAPACKUtilities.cmake  ScaLAPACKUtilities.cmake  blis_int_size.c  func_check.cxx  openblas_int_size.c
