cmake_minimum_required( VERSION 3.10 )
project(blas_test LANGUAGES C)

find_package( BLAS COMPONENTS lp64 )
message( STATUS "BLAS_VENDOR              = ${BLAS_VENDOR}"              )
message( STATUS "BLAS_LIBRARIES           = ${BLAS_LIBRARIES}"           )
message( STATUS "BLAS_COMPILE_DEFINITIONS = ${BLAS_COMPILE_DEFINITIONS}" )
message( STATUS "BLAS_FORTRAN_LOWER       = ${BLAS_FORTRAN_LOWER}"       )
message( STATUS "BLAS_FORTRAN_UNDERSCORE  = ${BLAS_FORTRAN_UNDERSCORE}"  )
message( STATUS "BLAS_IS_LP64             = ${BLAS_IS_LP64}"             )
