cmake_minimum_required( VERSION 3.10 )
project(scalapack_test LANGUAGES C)

find_package( ScaLAPACK REQUIRED )
message( STATUS "ScaLAPACK_VENDOR              = ${ScaLAPACK_VENDOR}"              )
message( STATUS "ScaLAPACK_LIBRARIES           = ${ScaLAPACK_LIBRARIES}"           )
message( STATUS "ScaLAPACK_COMPILE_DEFINITIONS = ${ScaLAPACK_COMPILE_DEFINITIONS}" )
message( STATUS "ScaLAPACK_FORTRAN_LOWER       = ${ScaLAPACK_FORTRAN_LOWER}"       )
message( STATUS "ScaLAPACK_FORTRAN_UNDERSCORE  = ${ScaLAPACK_FORTRAN_UNDERSCORE}"  )
message( STATUS "ScaLAPACK_IS_LP64             = ${ScaLAPACK_IS_LP64}"             )
